系列1 垃圾回收相关概念